# KuiperLLama

./: .gitignore  CMakeLists.txt  dockerfile  draw.py  readme.md
cmake/: cuda.cmake
demo/: CMakeLists.txt  chat_qwen.cpp  main.cpp  main_chunk.cpp  main_qwen.cpp  main_qwen3.cpp  main_speculative.cpp  main_test.cpp
kuiper/include/base/: alloc.h  base.h  buffer.h  cuda_config.h  unicode-data.h  unicode.h  unordered_dense.h
kuiper/include/model/: config.h  llama3.h  model.h  quant_block.h  quant_cursor.h  qwen2.h  qwen3.h  raw_model_data.h
kuiper/include/op/: encode.h  layer.h  matmul_sq4.h  mha.h  rope.h
kuiper/include/tensor/: tensor.h
kuiper/source/base/: alloc_cu.cpp  base.cpp  buffer.cpp  unicode.cpp
kuiper/source/model/: llama3.cpp  model.cpp  qwen2.cpp  qwen3.cpp  raw_model_data.cpp
kuiper/source/op/: add.cpp  encode.cpp  layer.cpp  matmul.cpp  matmul_sq4.cpp  mha.cpp  rmsnorm.cpp  rope.cpp  swiglu.cpp
kuiper/source/op/kernels/: kernels_interface.h  kernels_interfaces.cpp
kuiper/source/op/kernels/cpu/: add_kernel.cpp  emb_kernel.cpp  matmul_kernel.cpp  mha_kernel.cpp  mha_kernel.h  rmsnorm_kernel.cpp  rope_kernel.cpp  scale_kernel.cpp  scale_sum_kernel.cpp  swiglu_kernel.cpp
kuiper/source/op/kernels/cuda/: add_kernel.cu  argmax_kernel.cu  emb_kernel.cu  matmul_kernel.cu  matmul_sq4_kernel.cu  matmul_sq4_kernel.cuh  matmul_sq4_kernel_0.cu  mha_kernel.cu  mha_kernel.cuh  rmsnorm_kernel.cu  rmsnorm_kernel.cuh  rope_kernel.cu  swiglu_kernel.cu
kuiper/source/op/kernels/cuda/awq/: dequantize.cuh  gemm_cuda.h  gemm_cuda_gen.cu
kuiper/source/tensor/: tensor.cpp
test/: CMakeLists.txt
test/test_op/: test_cu_add.cpp  test_cu_matmul.cpp  test_cu_matmul_qint8.cpp  test_cu_mha.cpp  test_cu_rmsnorm.cpp  test_cu_rope.cpp  test_cu_swiglu.cpp  test_load.cpp
tools/: awq_llama.py  calib.py  calib_1k.txt  config.json  debug_sq4_dump.py  export_and_align.py  export_awq.py  export_awq_2.py  export_awq_naive.py  export_awq_naive_v2.py  export_llama.py  export_llama3.py  export_qwen2.py  export_smooth_rtn.py  export_smooth_rtn_pro.py  export_smooth_rtn_pro_v2.py  export_smooth_rtn_pro_v3.py
tools/export_qwen3/: config.py  load.py  model.py  write_bin.py
