
add_executable(llama_infer main.cpp)
target_link_directories(llama_infer PUBLIC ${PROJECT_SOURCE_DIR}/lib)
target_link_libraries(llama_infer llama)
# add_executable(test_cuda main_test.cpp)
# target_link_directories(test_cuda PUBLIC ${PROJECT_SOURCE_DIR}/lib)
# target_link_libraries(test_cuda llama)
if (LLAMA3_SUPPORT)
    message(STATUS "LINK LLAMA3 SUPPORT")
    find_package(absl REQUIRED)
    find_package(re2 REQUIRED)
    find_package(nlohmann_json REQUIRED)
    target_link_libraries(llama_infer absl::base re2::re2 nlohmann_json::nlohmann_json)
endif ()
set_target_properties(llama_infer PROPERTIES CUDA_SEPARABLE_COMPILATION ON)


# ========== Speculative Decoding Demo ==========
add_executable(speculative_infer main_speculative.cpp)
target_link_directories(speculative_infer PUBLIC ${PROJECT_SOURCE_DIR}/lib)
target_link_libraries(speculative_infer llama)
if (LLAMA3_SUPPORT)
    message(STATUS "LINK LLAMA3 SUPPORT for speculative_infer")
    find_package(absl REQUIRED)
    find_package(re2 REQUIRED)
    find_package(nlohmann_json REQUIRED)
    target_link_libraries(speculative_infer absl::base re2::re2 nlohmann_json::nlohmann_json)
endif ()
set_target_properties(speculative_infer PROPERTIES CUDA_SEPARABLE_COMPILATION ON)


# ========== main_chunk Demo ==========
add_executable(main_chunk main_chunk.cpp)
target_link_directories(main_chunk PUBLIC ${PROJECT_SOURCE_DIR}/lib)
target_link_libraries(main_chunk llama)
if (LLAMA3_SUPPORT)
    message(STATUS "LINK LLAMA3 SUPPORT for main_chunk")
    find_package(absl REQUIRED)
    find_package(re2 REQUIRED)
    find_package(nlohmann_json REQUIRED)
    target_link_libraries(main_chunk absl::base re2::re2 nlohmann_json::nlohmann_json)
endif ()
set_target_properties(main_chunk PROPERTIES CUDA_SEPARABLE_COMPILATION ON)


if (QWEN2_SUPPORT)
    message(STATUS "LINK QWEN2 SUPPORT")
    add_executable(qwen_infer main_qwen.cpp)
    target_link_directories(qwen_infer PUBLIC ${PROJECT_SOURCE_DIR}/lib)
    find_package(absl REQUIRED)
    find_package(re2 REQUIRED)
    find_package(nlohmann_json REQUIRED)
    target_link_libraries(qwen_infer llama)
    target_link_libraries(qwen_infer absl::base re2::re2 nlohmann_json::nlohmann_json)
    set_target_properties(qwen_infer PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
elseif (QWEN3_SUPPORT)
    message(STATUS "LINK QWEN3 SUPPORT")
    add_executable(qwen3_infer main_qwen3.cpp)
    target_link_directories(qwen3_infer PUBLIC ${PROJECT_SOURCE_DIR}/lib)
    find_package(absl REQUIRED)
    find_package(re2 REQUIRED)
    find_package(nlohmann_json REQUIRED)
    target_link_libraries(qwen3_infer llama)
    target_link_libraries(qwen3_infer absl::base re2::re2 nlohmann_json::nlohmann_json)
    set_target_properties(qwen3_infer PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
endif ()